# iptv-api

./: .gitignore  pyproject.toml
output/: result.m3u  result.txt
output/ipv4/: result.m3u  result.txt
output/ipv6/: result.m3u  result.txt
