[project]
name = "iptv-api"
version = "0.1.0"
description = ""
authors = [
    {name = "leslie"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.1,<5.0.0)",
    "async-timeout (>=5.0.1,<6.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "opencc-python-reimplemented (>=0.1.7,<0.2.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "m3u8 (>=6.0.0,<7.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "pystray (>=0.19.5,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "default"
url = "http://mirrors.cloud.aliyuncs.com/pypi/simple/"
priority = "primary"

